--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL = 'mongodb+srv://admin:admin@voting.hyxer4h.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URL = 'mongodb+srv://admin:ADMIN@voting.hyxer4h.mongodb.net/?retryWrites=true&w=majority'
 PORT=3001
