--- a/package.json
+++ b/package.json
@@ -9,9 +9,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "jsonwebtoken": "^9.0.0",
-    "nodeman": "^1.1.2"
-  }
+  "license": "ISC"
 }
