--- a/Server/package.json
+++ b/Server/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jsonwebtoken": "^9.0.0",
-    "nodeman": "^1.1.2"
+    "nodemon": "^3.1.0"
   }
 }
