--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^3.1.0"
   }
